syntax = "proto3";

import "src/proto/project_id.proto";
import "src/proto/artifact.proto";
import "src/proto/run_id.proto";

package observation_tools.proto;

option java_multiple_files = true;
option java_package = "tools.observation.proto";

message ArtifactGroupUploaderData {
  ProjectId project_id = 7;
  RunId run_id = 5;
  ArtifactId id = 3;

  repeated ArtifactId ancestor_group_ids = 6;

  reserved 1, 2, 4;
}

message RunUploaderData {
  string project_id = 1;
  RunId run_id = 2;
}